<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_item">

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.dhandyjoe.stockku.ui.employee.fragment.TransactionFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_item"
        android:name="com.dhandyjoe.stockku.ui.employee.fragment.DashboardFragment"
        android:label= "@string/title_item"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dhandyjoe.stockku.ui.employee.fragment.FragmentNotification"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>